<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_motion_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <Button

        android:text="@string/head_up"
        android:id="@+id/btn_up_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/waist"
        android:id="@+id/btn_waist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/byebye"
        android:id="@+id/btn_byebye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/add_ear_logic"
        android:id="@+id/btn_add_earlogic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
