<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.turing123.robotframe.demo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/l_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/robot_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_tips"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_connect_net_ap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_net_by_ap_demo" />

            <TextView
                android:id="@+id/net_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_start_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_a_mode_to_start_robotframe"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_auto_mode" />

            <Button
                android:id="@+id/btn_manual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_manual_mode" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_ready"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuling_robot_development_frame_demo"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_manual_asr"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_manual_asr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manual_asr" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/asr_result"
                android:layout_below="@+id/textView2"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/basic_api_demo" />

                    <Button
                        android:id="@+id/btn_tts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/tts_demo" />

                    <Button
                        android:id="@+id/btn_asr"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/btn_tts"
                        android:text="@string/asr_demo" />

                    <TextView
                        android:id="@+id/asr_result"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/btn_asr"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/asr_result"
                        android:textAlignment="center"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/btn_assemble"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/asr_result"
                        android:text="@string/assemble_demo" />

                    <Button
                        android:id="@+id/btn_visual_age"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/btn_assemble"
                        android:text="@string/visual_demo" />

                    <Button
                        android:id="@+id/btn_motion_test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btn_visual_age"
                        android:text="@string/motion_test" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scenario_demo" />

                    <Button
                        android:id="@+id/btn_add_scenario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/textView3"
                        android:text="@string/add_scenario" />

                    <Switch
                        android:id="@+id/swt_lost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/btn_add_scenario"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/main_scenario_controls_me"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textOff="@string/found_mind"
                        android:textOn="@string/lost_self"
                        android:textStyle="bold|italic" />

                    <Switch
                        android:id="@+id/swt_main_prompt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/swt_lost"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/main_scenario_asr_prompt"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textOff="@string/on"
                        android:textOn="@string/off"
                        android:textStyle="bold|italic" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/custom_function_demo" />

                    <Button
                        android:id="@+id/btn_replace_tts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/textView4"
                        android:text="@string/replace_tts_demo"
                        tools:layout_editor_absoluteX="1dp"
                        tools:layout_editor_absoluteY="124dp" />

                    <Button
                        android:id="@+id/btn_add_assemble"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/btn_replace_tts"
                        android:text="@string/add_assemble_output_demo" />

                    <Button
                        android:id="@+id/btn_remove_assemble"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/btn_add_assemble"
                        android:text="@string/remove_assemble_output_demo" />

                    <TextView
                        android:id="@+id/tv_asr_select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/btn_remove_assemble"
                        android:text="@string/asr" />

                    <Spinner
                        android:id="@+id/sp_asr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/tv_asr_select"
                        android:entries="@array/asr_processor"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp" />

                    <Button
                        android:id="@+id/btn_reset_asr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/sp_asr"
                        android:text="@string/reset_asr_function" />

                    <Button
                        android:id="@+id/btn_set_asr_hot_words"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/btn_reset_asr"
                        android:text="@string/set_asr_hot_words" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/features_demo" />

                    <Button
                        android:id="@+id/btn_resource"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/textView5"
                        android:text="@string/resource_manager_demo" />

                    <Button
                        android:id="@+id/btn_local_command"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/btn_resource"
                        android:text="@string/add_local_command" />

                    <Button
                        android:id="@+id/btn_remove_local_command"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/btn_local_command"
                        android:text="@string/remove_local_command" />

                    <Button
                        android:id="@+id/btn_notify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignStart="@+id/btn_resource"
                        android:layout_below="@+id/btn_remove_local_command"
                        android:text="@string/notification_demo" />

                    <TextView
                        android:id="@+id/tv_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/btn_resource"
                        android:layout_below="@+id/btn_notify"
                        android:text="@string/notify"
                        android:textAlignment="center"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/btn_get_system_properties"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/tv_notification"
                        android:text="@string/get_system_properties" />

                    <Button
                        android:id="@id/btn_connect_net_ap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignStart="@+id/btn_resource"
                        android:layout_below="@+id/tv_notification"
                        android:text="@string/connect_net_by_ap_demo" />

                    <Button
                        android:id="@+id/btn_connect_net_wifi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignStart="@+id/btn_resource"
                        android:layout_below="@+id/btn_connect_net_ap"
                        android:text="@string/connect_net_by_wifi_direct_demo" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="PRODUCT FLAVOR" />

                    <Button
                        android:id="@+id/btn_product_flavor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="PRODUCT FLAVOR FEATURES" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
