<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.turing123.robotframe.demo.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        >


        <LinearLayout
            android:id="@+id/l_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvStartPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_tips"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                />

            <Button
                android:id="@+id/btn_connect_net_ap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_net_by_ap_demo" />

            <Button
                android:id="@+id/btn_connect_net_sinvoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_net_by_voice_demo"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/btn_assemble"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:text="@string/assemble_demo" />

            <Button
                android:id="@+id/btn_serial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:text="@string/serialport_demo" />


            <Button
                android:id="@+id/btn_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_auto_mode"
                android:visibility="visible"
                />

            <Button
                android:id="@+id/btn_tts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tts_demo" />

        </LinearLayout>



    </LinearLayout>
</LinearLayout>
